# avito_qa

./: README.md  pyproject.toml  task_1.md
task_2/: TESTCASES.md
task_2/pages/: eco.py
task_2/test_eco/: test_screenshot_eco.py
