[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["ddevais <ddevais@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44.0"
pytest-playwright = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
